<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    >

    <ImageView
        android:id="@+id/appLogoImg"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/appNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogoImg"
        android:layout_centerInParent="true"
        android:fontFamily="@font/opensans_bold"
        android:padding="@dimen/_3sdp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size" />

    <TextView
        android:id="@+id/appVersionTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTxt"
        android:layout_centerInParent="true"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/app_version"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-15dp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/powered_by"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_1sdp"
            app:srcCompat="@drawable/ic_unfold_logo"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</RelativeLayout>